[gd_scene load_steps=3 format=2]

[ext_resource path="res://sprites/Shockwave Gun-1.png.png" type="Texture" id=1]
[ext_resource path="res://player/shockwave.gd" type="Script" id=2]

[node name="shockwave" type="Sprite"]
script = ExtResource( 2 )

[node name="ShockwaveGun" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="ShockwaveGun"]
position = Vector2( 3.5, 1 )

[node name="Gun_Timer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="timeout" from="Gun_Timer" to="." method="_on_Gun_Timer_timeout"]
